# filler

./: CMakeLists.txt  Makefile  filler.trace  map  res.txt  visu_filler  yochered.filler
includes/: filler.h  visualize.h
libft/: Makefile  ft_atoi.c  ft_count_digits.c  ft_printf.c  ft_strsplit.c  get_next_line.c
libft/includes/: ft_printf.h  libft.h
libft/printf_src/: bonus_types.c  function_array.c  handlers.c  mem_funcs.c  print_float.c  print_funcs.c  print_pointer.c  print_uint.c  str_functions.c
src/: additional_funcs.c  algorithm.c  fill_map_layout.c  find_distance.c  find_funcs.c  get_description.c  main.c
visu/: parse.c  print.c  visu.c  visu.h  windows_funcs.c
visualizer/: stdfuncs.c  visualize.c
